added local jquery, update for calendar links

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 <div id="bg" style="position:absolute; top:0px; left:0px; width:320px; height:460px;"></div>
+	
+	<script type="text/javascript" src="http://clients.admaxim.com/main3/scripts/jQuery/jquery-1.4.2.min.js"></script>
 
     <script type="text/javascript" src="config.js"></script>
 
